--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -3,54 +3,62 @@
         <div class="container-fluid p-0">
             <div class="logoTabsContainer">
                 <img src="assets/images/logos/findly_logo.svg" class="logoKoreIcon" [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange (click)="analyticsClick('apps',true)">
-                <div class="myappname" *ngIf="appName"><div  container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div></div>
+                <div class="myappname" *ngIf="appName">
+                    <div container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div>
+                </div>
                 <div class="headerTabsContainer">
-                    <div class="headerMenuTab" [ngClass] ="{'active' : mainMenu == '/summary'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary')">Overview</div>
-                    <div class="headerMenuTab" id="sourceTab" [ngClass] ="{'active' : mainMenu == '/source'}" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('/source')">
-                       <span >Indices</span>
-                       <span routerLink="/content" class="d-none"></span>
-                       <span routerLink="/faqs" class="d-none"></span>
-                       <span routerLink="/indices" class="d-none"></span>
-                       <span routerLink="/botActions" class="d-none"></span>
-                       <span routerLink="/ml-threshold" class="d-none"></span>
-                       <span routerLink="/traits" class="d-none"></span>
-                       <span routerLink="/rules" class="d-none"></span>
-                       <span routerLink="/index" class="d-none"></span>
-                       <span routerLink="/query" class="d-none"></span>
-                       <span routerLink="/attributes" class="d-none"></span>
-                       
-                    </div>                    
-                    <div class="kr-sg-dropdowns headerMenuTab" [ngClass] ="{'active' : (mainMenu == '/dashboard'
+                    <div class="headerMenuTab" [ngClass]="{'active' : mainMenu == '/summary'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary')">Overview</div>
+                    <div class="headerMenuTab" id="sourceTab" [ngClass]="{'active' : mainMenu == '/source'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/source')">
+                        <span>Indices</span>
+                        <span routerLink="/content" class="d-none"></span>
+                        <span routerLink="/faqs" class="d-none"></span>
+                        <span routerLink="/indices" class="d-none"></span>
+                        <span routerLink="/botActions" class="d-none"></span>
+                        <span routerLink="/ml-threshold" class="d-none"></span>
+                        <span routerLink="/traits" class="d-none"></span>
+                        <span routerLink="/rules" class="d-none"></span>
+                        <span routerLink="/index" class="d-none"></span>
+                        <span routerLink="/query" class="d-none"></span>
+                        <span routerLink="/attributes" class="d-none"></span>
+
+                    </div>
+                    <div class="kr-sg-dropdowns headerMenuTab" [ngClass]="{'active' : (mainMenu == '/dashboard'
                      || mainMenu == '/userEngagement' || mainMenu == '/searchInsights' ||mainMenu == '/resultInsights')}">
                         <div class="dropdown dropdown-open">
-                            <button class="dropdown-toggle dropdown-input cust-repeat-type" data-toggle="dropdown" > Analytics</button>                                            
-                            <ul class="dropdown-menu content-menu content-width">                                               
-                              <li (click)="analyticsClick('/dashboard')" id="dashboardTab" [ngClass] ="{'active' : mainMenu == '/dashboard'}" ><a>Dashboard</a></li>
-                              <li (click)="analyticsClick('/userEngagement')" [ngClass] ="{'active' : mainMenu == '/userEngagement'}"><a>User Engagement</a></li>
-                              <li (click)="analyticsClick('/searchInsights')" [ngClass] ="{'active' : mainMenu == '/searchInsights'}"><a>Search Insights</a></li>
-                              <li (click)="analyticsClick('/resultInsights')" [ngClass] ="{'active' : mainMenu == '/resultInsights'}"><a>Results Insights</a></li>
+                            <button class="dropdown-toggle dropdown-input cust-repeat-type" data-toggle="dropdown"> Analytics</button>
+                            <ul class="dropdown-menu content-menu content-width">
+                                <li (click)="analyticsClick('/dashboard')" id="dashboardTab" [ngClass]="{'active' : mainMenu == '/dashboard'}"><a>Dashboard</a></li>
+                                <li (click)="analyticsClick('/userEngagement')" [ngClass]="{'active' : mainMenu == '/userEngagement'}"><a>User Engagement</a></li>
+                                <li (click)="analyticsClick('/searchInsights')" [ngClass]="{'active' : mainMenu == '/searchInsights'}"><a>Search Insights</a></li>
+                                <li (click)="analyticsClick('/resultInsights')" [ngClass]="{'active' : mainMenu == '/resultInsights'}"><a>Results Insights</a></li>
                             </ul>
-                          </div>
+                        </div>
                     </div>
                     <!-- <div class="headerMenuTab" [routerLink]="['/dashboard']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div> -->
-                    <div class="headerMenuTab" id='experimentsTab' [ngClass] ="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div>
-                    <div class="headerMenuTab"  id='channelsTab' [ngClass] ="{'active' : mainMenu == '/settings'}" (click)="analyticsClick('/settings')">Settings </div>
+                    <div class="headerMenuTab" id='experimentsTab' [ngClass]="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div>
+                    <div class="headerMenuTab" id='channelsTab' [ngClass]="{'active' : mainMenu == '/settings'}" (click)="analyticsClick('/settings')">Settings </div>
                 </div>
             </div>
-            <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end"> 
+            <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end">
                 <ng-template #rt let-r="result" let-t="term">
                     <ngb-highlight (click)="triggerRoute(null,r)" [result]="r.displayName" [term]="t"></ngb-highlight>
-                  </ng-template>
+                </ng-template>
                 <li class="nav-item pr-2 mr-2 autoSearchTools">
                     <img src="assets/icons/sidemenu/search.svg" (click)="toggleSearch(true)" [ngClass]="{'d-none': searchActive}">
-                    <div class="kr-sg-input-search" [ngClass]="{'d-none': !searchActive}" >                               
+                    <!-- <div class="kr-sg-input-search" [ngClass]="{'d-none': !searchActive}" >                               
                         <input type="text" placeholder="Search" class="input-search" (keydown.enter)="triggerRoute(searchText)" [(ngModel)]="searchText" [ngbTypeahead]="search" [resultTemplate]="rt"  [inputFormatter]="formatter">
                         <img src="assets/images/close.svg" class="search-icon" (click)="toggleSearch(false)">
+                    </div> -->
+                    <div class="kr-sg-input-search" [ngClass]="{'d-none': !searchActive}">
+                        <input type="text" placeholder="Search" class="input-search" (keyup.enter)="triggerRoute(searchText)" [ngClass]="{'pl-33':!searchText}" autocomplete="off" [(ngModel)]="searchText" (focusout)="toggleSearch(false)" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                            (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'" [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter">
+                        <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchText">
+                        <img class="close-icon" *ngIf="searchText" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchText}" (click)="searchText ='';toggleSearch(false)">
                     </div>
-                </li>   
+                </li>
                 <div class="p-0 text-right nav-item pr-4 mr-2 trainBlock">
                     <button class="kr-sg-button-primary btn_lg" [disabled]='training' (click)="train()">{{(training)?'Training...':'Train'}}</button>
-                </div>         
+                </div>
                 <li class="nav-item pr-4 mr-2">
                     <img src="assets/icons/sidemenu/notification.svg">
                 </li>
@@ -68,7 +76,7 @@
                         <button mat-menu-item (click)="switchAccount()" class="switchAccount" *ngIf="showSwichAccountOption">Switch Account</button>
                         <button mat-menu-item (click)="logoutClick()" class="logOut"><img src="assets/images/poweroffIcon.svg" class="poweroffIcon">Logout</button>
                     </mat-menu>
-                </li>                
+                </li>
             </ul>
         </div>
     </nav>
