--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -1,311 +1,358 @@
-
 @import './../../../app/scss/variables/variables.scss';
-::ng-deep.dropdown-item.active, .dropdown-item:active{
-  background-color: #F3F8FF !important;
-  color: black;
-}
-::ng-deep.content-menu{
-  .active{
+::ng-deep.dropdown-item.active,
+.dropdown-item:active {
     background-color: #F3F8FF !important;
-  }
+    color: black;
 }
-.findlyHeader{
-   box-shadow: 0px 1px 5px rgba(32, 33, 36, 0.2);;
-   background: $whiteColor;
-   padding: 0 20px;
-   z-index: 100 !important;
-   .logoKoreIcon{
-     outline: none;
-     cursor: pointer;
-   }
-   &.onboarding-header{
-     box-shadow: none;
-    background: transparent;
-   }
-   &.headerCreation{
-     padding-left: 0 !important;
-   }
-    .container-fluid{
-      .logoTabsContainer{
-        display: flex;
-        .headerTabsContainer{
-          padding-left: 20px;
-          .headerMenuTab{
-              text-transform: uppercase;
-              color: #202124;
-              border-bottom: 0px solid #fff;
-              line-height: 60px;
-              float: left;
-              margin-right: 20px;
-              cursor: pointer;
-              font-weight: 600;
-              font-size: 12px;
-              padding: 0 5px;
-              outline: none;
-              position: relative;
-              transition: 0.3s all ease;
-              &::before{                
-                content: "";
-                position: absolute;
-                width: 100%;   
-                border-bottom: 2px solid #0D6EFD;            
-                bottom: 0;
-                left: 0;
-                display: none;
-              }
-              &.active{
-                &::before{                                 
-                  display: block;
-                }
-              }
-              &:hover{
-                &::before{                                 
-                  display: block;
-                }
-              }
-              .statusIndicator{
-                display: inline-block;
-                background-color: #FF2661;
-                width: 4px;
-                height: 4px;
-                position: absolute;
-                left: 30px;
-                top: 15px;
-                border-radius: 50%;
-              }
-              &.kr-sg-dropdowns{
-                width: auto;
-                .dropdown-open {
-                  .dropdown-input{
-                    border: 0;
-                    padding-left: 0;
+
+::ng-deep.content-menu {
+    .active {
+        background-color: #F3F8FF !important;
+    }
+}
+
+.findlyHeader {
+    box-shadow: 0px 1px 5px rgba(32, 33, 36, 0.2);
+    ;
+    background: $whiteColor;
+    padding: 0 20px;
+    z-index: 100 !important;
+    .logoKoreIcon {
+        outline: none;
+        cursor: pointer;
+    }
+    &.onboarding-header {
+        box-shadow: none;
+        background: transparent;
+    }
+    &.headerCreation {
+        padding-left: 0 !important;
+    }
+    .container-fluid {
+        .logoTabsContainer {
+            display: flex;
+            .headerTabsContainer {
+                padding-left: 20px;
+                .headerMenuTab {
                     text-transform: uppercase;
                     color: #202124;
                     border-bottom: 0px solid #fff;
+                    line-height: 60px;
+                    float: left;
+                    margin-right: 20px;
                     cursor: pointer;
                     font-weight: 600;
                     font-size: 12px;
+                    padding: 0 5px;
                     outline: none;
                     position: relative;
                     transition: 0.3s all ease;
-                    &::before{
-                      right: 4px !important;
-                      width: 12px !important;
-                      background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAHCAYAAAA8sqwkAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABbSURBVHgBhY9tDcAgEEMrYRKQMElIQAIS5gwJkzAJtyP0Ej5y8JImUF5/ADSS5oJPfYt2qQfRFE1w5EInWfmweKdRYCd0BvI06uUMBxt9zFY2IkVB99ETN7PwA8d/F5/yK146AAAAAElFTkSuQmCC');
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        width: 100%;
+                        border-bottom: 2px solid #0D6EFD;
+                        bottom: 0;
+                        left: 0;
+                        display: none;
                     }
-                  }
-                  &.show{
-                    &::before{
-                      content: "";
-                      position: absolute;
-                      width: calc(100% + 10px);
-                      border-bottom: 2px solid #0D6EFD;
-                      bottom: 0;
-                      left: -5px;
+                    &.active {
+                        &::before {
+                            display: block;
+                        }
                     }
-                  }
-                  .content-width{
-                    left: -30px;
-                    background: #FFFFFF;
-                    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
-                    border-radius: 4px;
-                    border: 0;
-                    min-width: 175px;
-                    .active{
-                      a{
-                        font-weight: bold !important;
-                      }
+                    &:hover {
+                        &::before {
+                            display: block;
+                        }
                     }
-                    li{
-                      a{
-                        text-transform: capitalize;
-                        font-weight: normal;
-                        color: #000000;
-                        font-size: 14px;
-                        padding: 0 20px;
-                      }
+                    .statusIndicator {
+                        display: inline-block;
+                        background-color: #FF2661;
+                        width: 4px;
+                        height: 4px;
+                        position: absolute;
+                        left: 30px;
+                        top: 15px;
+                        border-radius: 50%;
                     }
-                  }
+                    &.kr-sg-dropdowns {
+                        width: auto;
+                        .dropdown-open {
+                            .dropdown-input {
+                                border: 0;
+                                padding-left: 0;
+                                text-transform: uppercase;
+                                color: #202124;
+                                border-bottom: 0px solid #fff;
+                                cursor: pointer;
+                                font-weight: 600;
+                                font-size: 12px;
+                                outline: none;
+                                position: relative;
+                                transition: 0.3s all ease;
+                                &::before {
+                                    right: 4px !important;
+                                    width: 12px !important;
+                                    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAHCAYAAAA8sqwkAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABbSURBVHgBhY9tDcAgEEMrYRKQMElIQAIS5gwJkzAJtyP0Ej5y8JImUF5/ADSS5oJPfYt2qQfRFE1w5EInWfmweKdRYCd0BvI06uUMBxt9zFY2IkVB99ETN7PwA8d/F5/yK146AAAAAElFTkSuQmCC');
+                                }
+                            }
+                            &.show {
+                                &::before {
+                                    content: "";
+                                    position: absolute;
+                                    width: calc(100% + 10px);
+                                    border-bottom: 2px solid #0D6EFD;
+                                    bottom: 0;
+                                    left: -5px;
+                                }
+                            }
+                            .content-width {
+                                left: -30px;
+                                background: #FFFFFF;
+                                box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+                                border-radius: 4px;
+                                border: 0;
+                                min-width: 175px;
+                                .active {
+                                    a {
+                                        font-weight: bold !important;
+                                    }
+                                }
+                                li {
+                                    a {
+                                        text-transform: capitalize;
+                                        font-weight: normal;
+                                        color: #000000;
+                                        font-size: 14px;
+                                        padding: 0 20px;
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
-              }
-              
-          }
-        }
-      }
-      .homePageTitle{
-        position: absolute;
-        left: 14%;
-        .currentTitle{
-          font-size: 14px;
-          font-weight: bold;
-          color: $primaryColor;
-        }
-        .callFlowTitleName{
-          font-size: 16px;
-          color: $primaryColor;
-          img {
-            transform: rotate(90deg);
-            cursor: pointer;
-            position: relative;
-            top: -1px;
-            margin-right: 15px;
-          }
-        }
-      }
-      .myappname{
-        position: relative;
-        width: 205px;
-        .name{
-          text-align: center;
-          vertical-align: middle;
-          min-height: auto;
-          background: #fff;
-          position: relative;
-          top: 19px;
-          color: #26344A;
-          font-weight: 500;
-          font-size: 14px;
-          line-height: 17px;
-          //border: 1px solid #BDC1C6;
-          box-sizing: border-box;
-          border-radius: 4px;
-          //padding: 1px 10px;
-          margin-left: 30px;
-          max-width: 160px;
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          display: inline-block;
-          height: 19px;
-        }
-        &::before{
-          content: "";
-          position: absolute;
-          height: calc(100% - 24px);
-          left: 15px;
-          top: 12px;
-          border-right: 1px solid #D8D8D8;
-        }
-      }
-
-
-      .nav-flex-icons{
-        .kr-sg-input-search{
-          width: 200px;
-        }
-        .headerIcons{
-          .mat-button-focus-overlay{
-            display: none !important;
-          }
-        }
-      }
-      .right-menu-content{
-        .nav-item{
-          img{
-            cursor: pointer;
-            &.search-icon{
-              right: 11px;
-              left: auto;
             }
-          }
         }
-      }
+        .homePageTitle {
+            position: absolute;
+            left: 14%;
+            .currentTitle {
+                font-size: 14px;
+                font-weight: bold;
+                color: $primaryColor;
+            }
+            .callFlowTitleName {
+                font-size: 16px;
+                color: $primaryColor;
+                img {
+                    transform: rotate(90deg);
+                    cursor: pointer;
+                    position: relative;
+                    top: -1px;
+                    margin-right: 15px;
+                }
+            }
+        }
+        .myappname {
+            position: relative;
+            width: 205px;
+            .name {
+                text-align: center;
+                vertical-align: middle;
+                min-height: auto;
+                background: #fff;
+                position: relative;
+                top: 19px;
+                color: #26344A;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 17px;
+                //border: 1px solid #BDC1C6;
+                box-sizing: border-box;
+                border-radius: 4px;
+                //padding: 1px 10px;
+                margin-left: 30px;
+                max-width: 160px;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                display: inline-block;
+                height: 19px;
+            }
+            &::before {
+                content: "";
+                position: absolute;
+                height: calc(100% - 24px);
+                left: 15px;
+                top: 12px;
+                border-right: 1px solid #D8D8D8;
+            }
+        }
+        .nav-flex-icons {
+            .kr-sg-input-search {
+                width: 200px;
+            }
+            .headerIcons {
+                .mat-button-focus-overlay {
+                    display: none !important;
+                }
+            }
+        }
+        .right-menu-content {
+            .nav-item {
+                img {
+                    cursor: pointer;
+                    &.search-icon {
+                        // right: 11px;
+                        // left: auto;
+                        left: 11px;
+                    }
+                }
+            }
+        }
     }
-  
-.progressbar {
-    margin: 0;
-    padding: 0;
-    counter-reset: step;
-    width: 400px;
-  }
-  .progressbar li {
-    list-style-type: none;
-    width: 33.33%;
-    float: left;
-    font-size: 12px;
-    position: relative;
-    text-align: center;
-    text-transform: none;
-    color: $secondaryColor;
-  }
-  .progressbar li .titleBGWhite{
-    display: inline-block;
-    padding: 2px 6px;
-    background: $whiteColor;
-  }
-  .progressbar li .titleBGWhite.marginRight20{
-    margin-right: 20px;
-  }
-//   .progressbar li:before {
-//     width: 30px;
-//     height: 30px;
-//     content: counter(step);
-//     counter-increment: step;
-//     line-height: 30px;
-//     border: 2px solid $secondaryColor;
-//     display: block;
-//     text-align: center;
-//     margin: 0 auto 10px auto;
-//     border-radius: 50%;
-//     background-color: $whiteColor;
-//   }
-  .greenStep{
-    // height: 19px;
-      position: relative;
-      top: -2px;
-      margin-right: 5px;
-  }
-  .grayStep{
-    // height: 19px;
-      position: relative;
-      top: -2px;
-      margin-left: 5px;
-  }
-  .progressbar li:after {
-    width: 100%;
-    height: 2px;
-    content: '';
-    position: absolute;
-    background-color: $secondaryColor;
-    top: 10px;
-    left: -50%;
-    z-index: -1;
-  }
-  .progressbar li:first-child:after {
-    content: none;
-  }
-  .progressbar li.active {
-    color: $hoverColor;
-  }
-  .progressbar li.default {
-    color: $hoverColor;
-  }
-  .progressbar li.active:before {
-    border-color: $hoverColor;
-  }
-  .progressbar li.active + li:after {
-    background-color: $hoverColor;
-  }
-  .progressbarItem2{
-    position: relative;
-    right: -16px;
-  }
-  .circleTick {
-    position: absolute;
-    right: 6px;
-    top: 2px;
-    background: $whiteColor;
-    display:none;
-  }
-  .circleTick.chooseIcon{
-    right: -30px;
-  }
-  .progressbar li.active .circleTick{
-    display: block;
-  }
+    .progressbar {
+        margin: 0;
+        padding: 0;
+        counter-reset: step;
+        width: 400px;
+    }
+    .progressbar li {
+        list-style-type: none;
+        width: 33.33%;
+        float: left;
+        font-size: 12px;
+        position: relative;
+        text-align: center;
+        text-transform: none;
+        color: $secondaryColor;
+    }
+    .progressbar li .titleBGWhite {
+        display: inline-block;
+        padding: 2px 6px;
+        background: $whiteColor;
+    }
+    .progressbar li .titleBGWhite.marginRight20 {
+        margin-right: 20px;
+    }
+    //   .progressbar li:before {
+    //     width: 30px;
+    //     height: 30px;
+    //     content: counter(step);
+    //     counter-increment: step;
+    //     line-height: 30px;
+    //     border: 2px solid $secondaryColor;
+    //     display: block;
+    //     text-align: center;
+    //     margin: 0 auto 10px auto;
+    //     border-radius: 50%;
+    //     background-color: $whiteColor;
+    //   }
+    .greenStep {
+        // height: 19px;
+        position: relative;
+        top: -2px;
+        margin-right: 5px;
+    }
+    .grayStep {
+        // height: 19px;
+        position: relative;
+        top: -2px;
+        margin-left: 5px;
+    }
+    .progressbar li:after {
+        width: 100%;
+        height: 2px;
+        content: '';
+        position: absolute;
+        background-color: $secondaryColor;
+        top: 10px;
+        left: -50%;
+        z-index: -1;
+    }
+    .progressbar li:first-child:after {
+        content: none;
+    }
+    .progressbar li.active {
+        color: $hoverColor;
+    }
+    .progressbar li.default {
+        color: $hoverColor;
+    }
+    .progressbar li.active:before {
+        border-color: $hoverColor;
+    }
+    .progressbar li.active+li:after {
+        background-color: $hoverColor;
+    }
+    .progressbarItem2 {
+        position: relative;
+        right: -16px;
+    }
+    .circleTick {
+        position: absolute;
+        right: 6px;
+        top: 2px;
+        background: $whiteColor;
+        display: none;
+    }
+    .circleTick.chooseIcon {
+        right: -30px;
+    }
+    .progressbar li.active .circleTick {
+        display: block;
+    }
 }
-::ng-deep .headerIcons{
-  .mat-button-focus-overlay{
-    display: none !important;
-  }
+
+::ng-deep .headerIcons {
+    .mat-button-focus-overlay {
+        display: none !important;
+    }
+}
+
+//Search Input styles//
+::ng-deep .kr-sg-input-search input.input-search::-webkit-input-placeholder {
+    color: #BDC1C6;
+    opacity: 1;
+}
+
+::ng-deep .kr-sg-input-search input.input-search {
+    background: #FFFFFF;
+    border: 1px solid #E4E5E7;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+::ng-deep .kr-sg-input-search input.input-search:hover::-webkit-input-placeholder {
+    color: #5F6368;
+    opacity: 1;
+}
+
+::ng-deep .kr-sg-input-search input.input-search:focus::-webkit-input-placeholder {
+    color: #BDC1C6;
+    opacity: 1;
+}
+
+::ng-deep .kr-sg-input-search input.input-search:hover {
+    border: 1px solid #BDC1C6;
+}
+
+::ng-deep .kr-sg-input-search input.input-search:focus {
+    border: 1px solid #0D6EFD;
+}
+
+.kr-sg-input-search .pl-33 {
+    padding-left: 33px;
+}
+
+.kr-sg-input-search .pr-28 {
+    padding-right: 28px;
+}
+
+.kr-sg-input-search .close-icon {
+    position: absolute;
+    right: 11px;
+    top: 12px;
+    cursor: pointer;
 }
