--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -123,32 +123,41 @@
     <div class="modal-header">
         <div class="header-title" (click)='closeStatusModal()'><img src="assets/images/closeCross.png"
                 class="closeCross">
-            {{(traits.addEditTraits._id)?'Edit':'Create New'}}
+            {{(traits.addEditTraits._id)?'Edit Trait Group':'New Trait Group'}}
         </div>
     </div>
     <perfect-scrollbar class="traits-modal-scroller">
         <div class="modal-body traits-modal-popup">
 
             <div class="kr-sg-input-text">
-                <div class="label-text">Trait Group</div>
-                <p class="text">Provide a name that represents group of traits. System will try to identify the
-                    closest
-                    trait in the group from user utterances.
-                    Example - 'vehicle type', 'device type'.
-                </p>
+                <div class="label-text">Trait Group Name</div>
                 <input type="text" autocomplete="off" placeholder="Enter Trait Group" class="input-text" maxlength="120" [(ngModel)]="traits.addEditTraits.groupName">
+                <p class="text">Eg: Vehicle type , Class
+                </p>
             </div>
             <div class="kr-sg-input-text">
-                <div class="label-text">Traits</div>
-                <p class="text">Add one or more traits and provide the required training sentences. E.g. 'car',
+                <!-- <div class="label-text">Traits</div> -->
+                <!-- <p class="text">Add one or more traits and provide the required training sentences. E.g. 'car',
                     'bus', 'modem', 'router'.
-                </p>
-                <input autocomplete="off" type="text" placeholder="Type & Enter To Add" class="input-text" maxlength="120" #traitValue [(ngModel)]="add.traitName"
+                </p> -->
+                <input autocomplete="off" type="text" placeholder="Type and Enter to Add Traits" class="input-text" maxlength="120" #traitValue [(ngModel)]="add.traitName"
                     (keyup.enter)="addTraits(add.traitName,$event)">
             </div>
-            <div class="traits-group" *ngIf="traits.addEditTraits && traits.addEditTraits.traitsArray && traits.addEditTraits.traitsArray.length">
-                <ng-container *ngFor="let item of traits.addEditTraits.traitsArray;let index = index;">
-                    <div class="traits-header" (click)="accordianAction(index)">
+            <div class="" *ngIf="traits.addEditTraits && traits.addEditTraits.traitsArray && traits.addEditTraits.traitsArray.length">
+                <ng-container >
+                    <div class="content-body row col-12 m-0" *ngFor="let item of traits.addEditTraits.traitsArray;let index = index;">
+                        <div class="col-2" title=" {{item.key}}"> {{item.key}}</div>
+                        <div class="col-8 row m-0 align-items-center pr-0">
+                            <span *ngIf="item.data.length"> {{item.data.length}} Utterances</span>
+                            <div class=" text-primary" *ngIf="!item.data.length" (click)="openAddUtteranceModel(index,item.key)"><span style="font-size: 20px;">+</span> Add utterances</div> 
+                        </div>
+                        <div class="col-2 ">
+                            <span (click)="openAddUtteranceModel(index,item.key)"  class="mr-4" style="font-size: 18px;"  placement="top-center" container='body' ngbTooltip="Add Utterance" tooltipClass="ngb_tooltip_custom_class sampleJson">+</span> 
+                            <img src="assets/icons/edit-pencil.svg" class="mr-4"  id="btn_edit_traits" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                            <img src="assets/icons/delete-table.svg"(click)="deleteTraitInGroup(item.key,traits.addEditTraits,$event,index)"  id="btn_delete_traits" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                        </div> 
+                    </div>
+                    <!-- <div class="traits-header" (click)="accordianAction(index)">
                         <span class="icon">
                             <img [ngClass]="{'expanded': (currentTraitEditIndex === index)}" src="assets/images/arrow.svg" class="ml-1">
                         </span>
@@ -181,7 +190,7 @@
                                 </div>
                             </ng-container>
                         </div>
-                    </div>
+                    </div> -->
                 </ng-container>
             </div>
         </div>
@@ -190,5 +199,29 @@
     <div class="modal-footer">
         <button class="kr-sg-button-primary btn_lg" [disabled]="!traits.addEditTraits.groupName" (click)="saveTraits(traits.addEditTraits)">Save</button>
         <button class="kr-sg-button-secondary btn_lg"  (click)="closeStatusModal()">Cancel</button>
+    </div>
+</kr-modal>
+
+<kr-modal modalType="center" modalClass="addTraitModalComponent" #addUtteranceModalPop>
+    <div class="modal-header">
+        <div class="header-title" (click)='closeUtteranceModal()'><img src="assets/images/closeCross.png"
+                class="closeCross">
+            Utterance
+        </div>
+    </div>
+    <perfect-scrollbar class="traits-modal-scroller">
+        <div class="modal-body traits-modal-popup">
+
+            <div class="kr-sg-input-text">
+                <input  maxlength="2048" type="text" autocomplete="off" placeholder="Add Utterance" class="input-text"
+                            (keyup)='addUtterance(newUtterance,currentTraitKey,$event,traits.addEditTraits,currentUtteranceIndex)' [(ngModel)]='newUtterance'
+                            name='traitName'>
+            </div>
+        </div>
+    </perfect-scrollbar>
+
+    <div class="modal-footer">
+        <button class="kr-sg-button-primary btn_lg" [disabled]="!newUtterance" (click)="addNewUtterance(newUtterance)">Add</button>
+        <button class="kr-sg-button-secondary btn_lg"  (click)="closeUtteranceModal()">Cancel</button>
     </div>
 </kr-modal>
