--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -3,7 +3,7 @@
         <div class="title">Usage Log</div>
         <div class="d-flex align-items-center">
             <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
-                <input type="text" placeholder="Search" class="input-search"  (keyup.enter)="searchItems()" [ngClass]="{'pl-33':!searchUsageLog}" autocomplete="off" [(ngModel)]="searchUsageLog" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                <input type="text" placeholder="Search" class="input-search"  [ngClass]="{'pl-33':!searchUsageLog}" autocomplete="off" [(ngModel)]="searchUsageLog" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchUsageLog">
                 <img class="close-icon" *ngIf="searchUsageLog" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchUsageLog}" (click)="searchUsageLog='';toggleSearch()">
