--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -120,7 +120,7 @@
                     font-style: normal;
                     font-weight: 500;
                     font-size: 12px;
-                    margin-right: 30px;
+                    // margin-right: 30px;
                     img {
                         margin-right: 7px;
                         cursor: pointer;
@@ -129,7 +129,7 @@
                     }
                 }                    
                 .kr-sg-input-search{
-                    width: 300px;
+                    width: 215px;
                     input{
                         padding-left: 34px;
                         padding-right: 10px;
@@ -138,6 +138,12 @@
                         left: 10px;
                         width: 16px;
                         height: 16px;
+                    }
+                    .close-icon {
+                        position: absolute;
+                        right: 11px;
+                        top: 12px;
+                        cursor: pointer;
                     }
                  } 
                 .kr-sg-dropdowns{
@@ -1236,6 +1242,13 @@
                             color: #DD3646;
                         }
                     }
+                    .inProgress{
+                        width: 20px;
+                        height: 20px;
+                        -webkit-animation:spin 4s linear infinite;
+                        -moz-animation:spin 4s linear infinite;
+                        animation:spin 4s linear infinite;
+                    }
                 }
                 .pages-count{
                     font-weight: normal;
@@ -1260,7 +1273,7 @@
         font-size: 10px;
         color: #a6bdda;
     }
-
+   
     .execution-table-data{
         .content-body{
             position: relative;
@@ -1355,5 +1368,12 @@
         font-size: 14px;
         line-height: 17px;
         margin-bottom: 30px;
+        }
+        .run-percentageDoneGrid{
+            position: absolute;
+            left: 290px;
+            top: 2px;
+            font-size: 10px;
+            color: #a6bdda;
         }
    
